fixes viewport height on mobile devices

--- a/Day_1_Countdown/style.css
+++ b/Day_1_Countdown/style.css
@@ -1,10 +1,11 @@
 body {
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-flow: column nowrap;
-    background-color: #171123;
+    background-color: #111214;
     margin: 0;
 }
 
